--- a/swp391.client/src/Pages/Login/usePasswordToggle.css
+++ b/swp391.client/src/Pages/Login/usePasswordToggle.css
@@ -1,12 +1,20 @@
 .password-input-container {
-    position: relative;
-  }
-  
-  .password-toggle-icon {
-    position: absolute;
-    top: 50%;
-    right: 15px;
-    transform: translateY(-90%);
-    cursor: pointer;
-    z-index: 2;
-  }
+  position: relative;
+}
+
+.password-toggle-icon {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-90%);
+  cursor: pointer;
+  z-index: 2;
+}
+.password-toggle-icon2 {
+  position: absolute;
+  top: 75%;
+  right: 15px;
+  transform: translateY(-90%);
+  cursor: pointer;
+  z-index: 2;
+}
